realigned contact header, fixes #22

--- a/source/stylesheets/contact.css.sass
+++ b/source/stylesheets/contact.css.sass
@@ -1,3 +1,8 @@
+#contact
+  @media screen and (max-width: $break-small)
+    h1
+      padding: 16px 16px 0
+
 form.contact
   max-width: 390px
 
